# gcal_rs

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: calendars.rs  events.rs
src/: client.rs  error.rs  lib.rs  oauth.rs  sendable.rs
src/calendar/: client.rs  list.rs  mod.rs  types.rs
src/event/: client.rs  mod.rs  types.rs
src/resources/: calendar_list.rs  events.rs  mod.rs
src/user/: mod.rs
