[package]
name = "gcal"
version = "0.1.6"
edition = "2021"
description = "gcal is simplistic a client library for Google Calendar, designed to power saturn-cli"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/gcal"
repository = "https://github.com/erikh/gcal"

[dependencies]
anyhow = "1"
thiserror = "1"

tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = "0.4"
url = "2"
reqwest = { version = "^0.12", features = ["gzip", "json"] }
oauth2 = "4.4.2"
